projet_gl/src/test/deca/context/valid/3_14/3_14_1_MethodBody.deca
// Description:
//    method body with decl var
//
// Resultats:
//    ok
//
// Historique:
//    cree le 17/01/2024

class A {
    int method1(){
        int int1 = 1;
        int res;
    }
}