projet_gl/src/test/deca/context/invalid/3_14/3_14_1_MethodBody.deca
// Description:
//    problem decl var in mathod body
//
// Resultats:
//    ligne 13 : Variable is redeclared.
//
// Historique:
//    cree le 17/01/2024

class A {
    int method1(){
        int int1 = 1;
        int int1;
    }
}